# rpt

./: .gitignore  CHANGELOG.md  INSTALL_UPDATE.bat  README.md  START.bat  manage.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.github/workflows/: ci.yml
ai_insights/: apps.py  urls.py  views.py
ai_insights/templates/ai_insights/: dashboard.html
assets/: forms.py  models.py  urls.py  views.py
assets/migrations/: 0001_initial.py
assets/templates/assets/: contribution_form.html  dashboard.html  holding_form.html
budget/: admin.py  forms.py  importers.py  models.py  tests.py  urls.py  utils.py  views.py
budget/migrations/: 0001_initial.py  0002_expensecategory_is_medical_expense.py
budget/templates/budget/: categories.html  category_form.html  confirm_delete.html  dashboard.html  (+2 more)
budget/templatetags/: budget_extras.py
core/: admin.py  forms.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py
debts/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
debts/migrations/: 0001_initial.py  0002_delete_debtinfo.py
income/: forms.py  models.py  urls.py  utils.py  views.py
income/migrations/: 0001_initial.py
life/: apps.py  forms.py  models.py  urls.py  views.py
life/migrations/: 0001_initial.py
people/: forms.py  models.py  tests.py  urls.py  views.py
people/migrations/: 0001_initial.py
retirement/: admin.py  apps.py  engine.py  forms.py  models.py  tests.py  urls.py  views.py
retirement/migrations/: 0001_initial.py
rpt/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
(+23 files in other folders)
