[project]
name = "RPT"
version = "0.1.1"
requires-python = ">=3.13"
dependencies = []

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_pypi = false
commit_message = "chore(release): {version} [skip ci]"
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
